--- a/Bella/index.html
+++ b/Bella/index.html
@@ -1,52 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="
-    stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hoja de Vida - Bella Elisa Roldán Rubiano</title>
 </head>
 <body>
     <div class="container mt-5">
-        <div class="row" >
-            <div class="col-sm-10 bg-danger-subtle p-2 text-center"> 
+        <!-- Encabezado con el nombre y el logo -->
+        <div class="row text-center">
+            <div class="col-sm-10 bg-danger-subtle p-2"> 
                 <h1 class="fst-italic">Bella Elisa Roldán Rubiano</h1>
-                <p>Desarrollador Full Stack</p>
+                <p>Desarrolladora Full Stack</p>
             </div>
             <div class="col-sm-2 bg-danger-subtle p-2 text-center"> 
-                <img src="logo.png" width="100px" height="120px">
+                <img src="logo.png" alt="Logo" width="100px" height="120px">
             </div>
         </div>     
-    
-    <div class="row" >
-        <div class="col-sm-3 bg-danger-subtle p-2 text-center">
-        <img src="perfil Bella.png" class="rounded-circle width="200px" height="200px""> 
-        <p>
-            <span class="fs-3 text fw-bolder" > Bella 
-            </span>
-        </p>
+        <!-- Perfil con imagen -->
+        <div class="row mt-3">
+            <div class="col-sm-3 bg-danger-subtle p-2 text-center">
+                <img src="perfil bella.png" class="rounded-circle" alt="Perfil de Bella" width="200px" height="200px"> 
+                <p><span class="fs-3 fw-bolder">Bella</span></p>
+            </div> 
+            <div class="col-sm-9 p-2"> 
+                <h2 class="text-center">Perfil Laboral</h2>
+                <p class="bg-white p-3">Desarrollador web Full Stack con experiencia en el diseño, desarrollo e implementación de aplicaciones web dinámicas y escalables. Domino tanto tecnologías frontend como backend, lo que me permite crear soluciones completas y eficientes. Manejo lenguajes como HTML, CSS, JavaScript, y frameworks como React y Angular en el lado del cliente, y Node.js, Express, y bases de datos como MongoDB y MySQL en el lado del servidor. Tengo un enfoque centrado en la experiencia del usuario (UX/UI) y la optimización del rendimiento, Me apasiona aprender nuevas tecnologías, adaptarme a diferentes equipos de trabajo y contribuir a proyectos innovadores.</p>
+            </div>
+        </div>
 
-        </div> 
-        <div class="c p-2 text-center"> 
-            <h2>Perfil Laboral</h2>
-            <p class="col-sm-3 bg-white">Desarrollador Web Full Stack, Auxiliar de Enfermería, Técnico en Cosmetología y Estética Integral, Técnico en Marketing Digital, 
-                con experiencia laboral en servicios:  digitación, procedimientos menores, toma de muestras de laboratorio, auxiliar en optometría 
-                y toma de examen WAM, hospitalización, referencia y contrarreferencia, prioritaria y TRIAGE, y en el área de SST, medicina estética, 
-                pre y post operatorios;A nivel comercial y servicio al cliente; Aplicación de herramientas TIC y AutoCAD, elaboración de informes.</p> 
-    <h1>Contacto</h1> 
-        <ul>
-            <li><a href="#"><Instagram>Instagram: https://www.instagram.com/roldan.be</Instagram></a></li>
-            <li><a href="#">LinkedIn: https://www.linkedin.com/in/beroldan/ </a></li>
-            <li><a href="#">Blog:</a></li>
-            <li><a href="#">Contacto WhatsApp: 3102800882</a></li>
-        </ul>    
-     
-        </div>     
+        <!-- Experiencia Laboral -->
+        <div class="row mt-3 text-center">
+            <h2>Experiencia Laboral</h2>
+            <div class="col-sm-12">
+                <h3>Estudiante</h2>
+</h3>
+                <p><em>Agosto 2024 - Presente</em></p>
+                <p>Soy desarrolladora web Full Stack con formación en el desarrollo de aplicaciones web modernas. Tengo conocimientos sólidos en tecnologías frontend como HTML, CSS, JavaScript y frameworks como React. En el lado backend, manejo Node.js, Express y bases de datos como MongoDB. Me apasiona el desarrollo de soluciones tecnológicas completas, combinando funcionalidad y diseño para ofrecer una excelente experiencia de usuario.
+
+                    A lo largo de mi formación he trabajado en diversos proyectos personales y académicos, donde he desarrollado habilidades para crear sitios web dinámicos y responsivos. Me esfuerzo por mantenerme al día con las tendencias tecnológicas y mejorar continuamente mis capacidades. Estoy entusiasmada por aplicar mis conocimientos en proyectos reales, y me adapto con facilidad a nuevas herramientas y metodologías.</p>
+
+                <h3>Perfil Anterior - Enfermera</h3>
+                <p><em> Inicio: enero/2019 - marzo/2020</em></p>
+                <p>Auxiliar de Enfermería, Técnico en Cosmetología y Estética Integral, Técnico en Marketing Digital, con experiencia laboral en servicios: digitación, procedimientos menores, toma de muestras de laboratorio, auxiliar en optometría y toma de examen WAM, hospitalización, referencia y contrarreferencia, prioritaria y TRIAGE, y en el área de SST, medicina estética, pre y post operatorios; A nivel comercial y servicio al cliente; Aplicación de herramientas TIC y AutoCAD, elaboración de informes..</p>
+            </div>
+        </div>
+
+        <!-- Educación -->
+        <div class="row mt-3 text-center">
+            <h2>Educación</h2>
+            <div class="col-sm-12">
+                <p><strong>Título:</strong> Ingenieria de sistemas - Universidad Incca</p>
+                <p><em>Inicio: 2024- presente</em></p>
+                <p><strong>Título:</strong> Desarrollador Web Full Stack -Talento Tech</p>
+                <p><em>Inicio: 2024-Presente</em></p>
+                <p><strong>Título:</strong> Técnico en Marketing Digital - Platzi</p>
+                <p><em>Inicio: 2020- 2021</em></p>
+            </div>
+        </div>
+
+        <!-- Skills -->
+        <div class="row mt-3 text-center">
+            <h2>Skills</h2>
+            <div class="col-sm-12">
+                <ul class="list-unstyled">
+                    <li>Desarrollo Web Full Stack</li>
+                    <li>Marketing Digital</li>
+                    <li>Community Manager</li>
+                    <li>Enfermera</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Idiomas -->
+        <div class="row mt-3 text-center">
+            <h2>Idiomas</h2>
+            <div class="col-sm-12">
+                <ul class="list-unstyled">
+                    <li>Español: Nativo</li>
+                    <li>Inglés: Intermedio</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Contacto y redes sociales -->
+        <div class="row mt-3 text-center">
+            <h2>Contacto y Redes Sociales</h2>
+            <div class="col-sm-12">
+                <p><strong>Teléfono:</strong> (+57) 310-2800882</p>
+                <p><strong>Correo:</strong> roldanbe98@.com</p>
+                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/beroldan/">linkedin.com/in/bella-roldan</a></p>
+                <p><strong>GitHub:</strong> <a href="https://github.com/Broldan98/Cymetria/blob/main/Bella/index.html">github.com/bella-roldan</a></p>
+            </div>
+        </div>
     </div>
-</div>
-
 </body>
 </html>
 
